Fix radio button align issue

--- a/src/components/styles/searchBar.css
+++ b/src/components/styles/searchBar.css
@@ -448,7 +448,7 @@ color: #1E1E1E;
   position: static;
   width: 269px;
   height: 0px;
-  right: 22px;
+  right: 15px;
   top: 0px;
   
   
